[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["gh@cartera-mesh.com"]
repository = "https://github.com/CarteraMesh/monedero-solana"
license = "MIT"
description = "Solana wasm client/wallet"
homepage = "https://cartera-mesh.com"
keywords = ["blockchain", "solana", "wasm"]
categories = ["wasm", "cryptography::cryptocurrencies" ]

[workspace]
resolver = "2"
members = [
  "instructor",
  "signer", 
  "test-utils",
  "stake",
  "tokens",
  "wallet",
  "jupiter",
]

[workspace.lints.rust]
unused_variables = "warn"
unused_imports = "warn"
dead_code = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic =  { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
future_not_send = "allow"
too_long_first_doc_paragraph = "allow"
#dead_code = "allow"

[workspace.dependencies]
aead = { version = "0.5.2" }
anyhow = { version = "1" }
async-trait = { version = "0.1"}
base64 =  { version = "0.22" }
bincode = { version = "1.3"}
borsh = { version = "^1.5" }
bon = { version = "3" }
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde",
    "wasmbind",
    "wasm-bindgen"
] }
data-encoding = { version = "2"}
derive_more = {version = "1", features = ["full"]}
dotenvy = {version = "0.15"}
enum-str-derive = { version = "0.1" }
futures = { version = "0.3"}
futures-util = { version = "0.3" }
hex = { version = "0.4" }
hkdf = "0.12"
itertools = { version = "0.14"}
lazy_static = "1.4"
once_cell = "1.16"
# pin-project-lite = {version = "0.2.14" }
rand = "0.9"
regex = "1.10"
rstest = { version = "0.25"}
reqwest = {version = "0.12", features = ["json"]}
sha2 = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = { version = "3" }
strum = { version = "0.27"}
strum_macros = { version = "0.27" }
spl-associated-token-account-client = { version = "2.0.0" }
spl-associated-token-account = {  version = "6"  }
spl-memo = { version = "6" }
spl-token = { version = "^7.0" }
spl-token-2022 = {version = "^8.0" }
solana-account = { version = ">=2.1, <2.2" }
solana-account-decoder = { version = ">=2.1, <2.2" }
solana-client ={ version = ">=2.1, <2.2" }
solana-compute-budget =  { version = ">=2.1, <2.2" }
solana-instruction = { version = ">=2.1, <2.2"}
solana-feature-set ={ version = ">=2.1, <2.2" }
solana-program = { version = ">=2.1, <2.2"}
solana-sdk = { version = ">=2.1, <2.2", default-features = false , features = ["full"] }
solana-pubkey = { version = ">=2.1, <2.2"}
solana-signature = { version = ">=2.1, <2.2"}
# solana-signer = { version = "0.0.2" }
# solana-transaction = { version = "0.0.2" }
thiserror =  { version = "2" }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tracing = { version = "0.1" }
tracing-error = { version = "0.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
trait-variant = "0.1.2"
url = "2.4"

## wasm
console_error_panic_hook = "0.1"
gloo-storage = { version = "0.3" }
gloo-timers = { version = "0.3", features = ["futures"] }
web-time = { version = "1.1.0", features = ["serde"] }
wasm-tracing = { version = "2", features = ["tracing-log"] }
wasm-bindgen-futures = { version = "0.4" }
wallet_standard_browser =  { version = "0.4", features = ["solana"] }
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
## TUI
#tuirealm = { version = "1.9" }
# tui-realm-stdlib = { version = "1.3" }
#tui-logger = { version = "0.12" , features = ["crossterm", "tracing-support"]}
#tui-widgets = { version = "0.3" }
#crossterm = { version = "0.28.1", features = ["event-stream"] }
#ratatui = { version = "0.28" }
