[package]
name = "monedero-solana-instructor"
version = "0.1.1-rc.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "collection of common solana instructions"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.release]
sign-commit = true
push-remote = "origin"

[dependencies]
borsh = { workspace = true }
monedero-solana-tokens = { path = "../tokens/", version = "0.1.1-rc.2"}
monedero-solana-stake = { path = "../stake/" , version = "0.1.1-rc.1"}
spl-associated-token-account = { workspace = true   }
spl-associated-token-account-client = { workspace = true }
spl-token = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-pubkey = { workspace = true }
spl-memo = { workspace = true }
thiserror  = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasm_client_solana = { version = "0.7", features = ["ssr", "zstd"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_client_solana = { version = "0.7", features = ["js"]}


[lints]
workspace = true

[dev-dependencies]
anyhow =  { workspace = true }
rstest = { workspace = true }
tracing-subscriber = { workspace = true }
test-utils = { path = "../test-utils" }
