[package]
name = "monedero-jup-ag"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "jupiter client wrapper with wasm support"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bon = { workspace = true }
itertools = { workspace = true }
reqwest = { workspace = true }
serde= { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
solana-pubkey = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasm_client_solana = { version = "0.7", features = ["ssr", "zstd"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_client_solana = { version = "0.7", features = ["js"]}

[dev-dependencies]
anyhow = "1"
tokio = { workspace = true }
test-utils = { path = "../test-utils" }
spl-token = { workspace = true }
