[package]
name = "monedero-signer-sender"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "API for async sign and send"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.release]
sign-commit = true
push-remote = "origin"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
solana-signature = { workspace = true }
solana-sdk = { workspace = true }
solana-pubkey = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasm_client_solana = { version = "0.7", features = ["ssr", "zstd"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_client_solana = { version = "0.7", features = ["js"]}


[dev-dependencies]
anyhow = { workspace = true }
