[package]
name = "test-utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
dotenvy = { workspace = true }
monedero-signer-sender = { path = "../signer"}
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk = { workspace = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasm_client_solana = { version = "0.8", features = ["ssr", "zstd"]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_client_solana = { version = "0.8", features = ["js"]}


[lints]
workspace = true
