[package]
name = "monedero-solana-tokens"
version = "0.1.1-rc.3"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "token instructions and client"
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.release]
sign-commit = true
push-remote = "origin"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-pubkey = { workspace = true }
spl-associated-token-account-client = { workspace = true }
spl-associated-token-account= { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
thiserror  = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasm_client_solana = { version = "0.7", features = ["ssr", "zstd"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_client_solana = { version = "0.7", features = ["js"]}


[lints]
workspace = true

[dev-dependencies]
anyhow =  { workspace = true }
dotenvy = { workspace = true }
rstest = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["full"]}
test-utils = { path = "../test-utils"}

[[test]]
name = "tokens"
 
[[test]]
name = "close"
 
[[test]]
name = "burn"
 
